# pyrosql-driver

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  gpg.key  index.html
.github/alpine-signing/: info-pyrosql-com.rsa.pub
.github/workflows/: ci.yml  release.yml
alpine/: APKBUILD-cli.in  APKBUILD.in
apt/stable/: apt-release.conf
apt/stable-legacy/: apt-release.conf
apt/stable-legacy/dists/stable/: InRelease  Release  Release.gpg
apt/stable-legacy/pool/main/: pyrosql-cli_1.3.3-1_amd64.deb  pyrosql-cli_1.3.3-1_arm64.deb  pyrosql-driver_1.1.0-1_amd64_stable-legacy.deb  pyrosql-driver_1.1.0-1_arm64.deb  pyrosql-driver_1.3.1-1_amd64.deb  pyrosql-driver_1.3.1-1_arm64.deb  pyrosql-driver_1.3.3-1_amd64.deb  pyrosql-driver_1.3.3-1_arm64.deb
apt/stable/dists/stable/: InRelease  Release  Release.gpg
cli/: Cargo.toml
cli/src/: args.rs  complete.rs  format.rs  main.rs  meta.rs  repl.rs  session.rs  sqltok.rs  vars.rs
cli/tests/: e2e.rs  e2e_full.rs  e2e_pty.rs
docs/: packaging-tier2-setup.md
dotnet/: PyroSQL.sln
dotnet/PyroSQL.Data/: PWireCodec.cs  PWireConnection.cs  PyroSQL.Data.csproj  PyroSqlCommand.cs  PyroSqlConnection.cs  PyroSqlConnectionStringBuilder.cs  PyroSqlDataReader.cs  PyroSqlException.cs  PyroSqlParameter.cs  PyroSqlParameterCollection.cs  PyroSqlTransaction.cs
dotnet/PyroSQL.Data.Tests/: ConnectionTests.cs  IntegrationTests.cs  PyroSQL.Data.Tests.csproj  QueryTests.cs  TransactionTests.cs
dotnet/efcore/PyroSQL.EntityFrameworkCore/: PyroSQL.EntityFrameworkCore.csproj  PyroSqlOptionsExtension.cs
dotnet/efcore/tests/: MigrationsSqlGeneratorTests.cs  OptionsExtensionTests.cs  PyroSQL.EntityFrameworkCore.Tests.csproj  TypeMappingSourceTests.cs
ffi-pwire/: Cargo.toml
ffi-pwire/src/: lib.rs
ffi-quic/: Cargo.toml
ffi-quic/src/: lib.rs
go/: codec.go  conn.go  driver.go  driver_test.go  go.mod  integration_test.go  pyrosql.go  rows.go  stmt.go
go/gorm/: go.mod  gorm_test.go  migrator.go  pyrosql.go
jdbc/: pom.xml
jdbc/hibernate/: pom.xml
node/: index.d.ts  index.js  package.json  pwire.js  test.js  test_pwire_codec.js
node/drizzle/: jest.config.js  package-lock.json  package.json
node/drizzle/src/: dialect.ts  driver.ts  index.ts  session.ts
node/drizzle/tests/: driver.test.ts
node/prisma/: package-lock.json  package.json
node/prisma/src/: adapter.ts  connector.ts  index.ts
node/prisma/tests/: adapter.test.ts
node/typeorm/: package-lock.json  package.json
node/typeorm/src/: PyroSqlConnectionOptions.ts  PyroSqlDriver.ts  PyroSqlQueryRunner.ts  index.ts
node/typeorm/tests/: driver.test.ts
pdo/: Dockerfile  build.sh  config.m4  php_pyrosql.h  pyrosql_ext.c  pyrosql_native.c  pyrosql_stmt.c
pdo/tests/: basic_test.php  native_test.php
php/: composer.json  pyrosql.h
php/doctrine-dbal/: Dockerfile  composer.json  phpunit.xml
php/doctrine-dbal/src/: Connection.php  Driver.php  ExceptionConverter.php  Platform.php  Result.php  SchemaManager.php  Statement.php
php/doctrine-dbal/tests/: DriverTest.php
php/laravel/: Dockerfile.test  composer.json  phpunit.xml
php/laravel/src/: PyroSqlConnection.php  PyroSqlConnector.php  PyroSqlServiceProvider.php
php/laravel/tests/: GrammarTest.php
php/src/: Client.php
protocol/: Cargo.toml
protocol/src/: codec.rs  error.rs  lib.rs
python/: README.md  pyproject.toml  test_integration_base.py  test_integration_django.py  test_integration_full.py  test_integration_sqlalchemy.py  test_pwire_codec.py
python/django/: pyproject.toml
python/django/pyrosql/django/: __init__.py  base.py  client.py  compiler.py  creation.py  features.py  introspection.py  operations.py  schema.py
python/django/tests/: test_backend.py
python/pyrosql/: __init__.py  django  pwire.py
python/sqlalchemy/: setup.py
python/sqlalchemy/pyrosql_dialect/: __init__.py  base.py  compiler.py  dbapi.py  types.py
python/sqlalchemy/tests/: test_dialect.py
rmp/: Cargo.toml
rmp/src/: budget.rs  connection.rs  fk_walker.rs  lib.rs  limits.rs  live_graph.rs  local_query.rs  mirror.rs  protocol.rs  row.rs  schema.rs
rmp/tests/: e2e_tcp.rs
ruby/: pyrosql.gemspec
ruby/lib/pyrosql/: codec.rb  connection.rb
ruby/spec/: adapter_spec.rb  integration_spec.rb
rust/: Cargo.toml
rust/diesel/: Cargo.toml
rust/diesel/src/: connection.rs  lib.rs  query_builder.rs  types.rs
rust/diesel/tests/: backend_test.rs
rust/examples/: bench_insert_raw.rs  bench_livesync.rs  bench_multi_insert_pg.rs  bench_mux.rs  bench_pipeline.rs  bench_pipeline_raw.rs  bench_pwire_prepare.rs  bench_setup.rs  bench_update_raw.rs  mux_smoke.rs
rust/sqlx/: Cargo.toml
rust/sqlx/src/: connection.rs  lib.rs  row.rs  type_info.rs
rust/sqlx/tests/: driver_test.rs
rust/src/: client.rs  config.rs  error.rs  lib.rs  mux.rs  pool.rs  pwire.rs  row.rs  scram_client.rs  transport.rs
rust/tests/: e2e.rs
tools/: gen_install_page.py
tools/pyrosql-dump/: Cargo.toml
tools/pyrosql-dump/src/: dump.rs  format.rs  lib.rs  main.rs  pwire.rs  restore.rs
tools/pyrosql-dump/tests/: format_test.rs  pwire_test.rs
tools/pyrosql-pooler/: Cargo.toml  Dockerfile
tools/pyrosql-pooler/src/: config.rs  main.rs  pool.rs  proxy.rs  stats.rs
tools/pyrosql-pooler/tests/: pool_test.rs
yum/stable-legacy/aarch64/: pyrosql-cli-1.3.3-1.aarch64.rpm  pyrosql-driver-1.1.0-1.aarch64.rpm  pyrosql-driver-1.1.0-1.aarch64.stable-legacy.rpm  pyrosql-driver-1.3.1-1.aarch64.rpm  pyrosql-driver-1.3.3-1.aarch64.rpm
yum/stable-legacy/x86_64/: pyrosql-cli-1.3.3-1.x86_64.rpm  pyrosql-driver-1.1.0-1.x86_64.rpm  pyrosql-driver-1.1.0-1.x86_64.stable-legacy.rpm  pyrosql-driver-1.3.1-1.x86_64.rpm  pyrosql-driver-1.3.3-1.x86_64.rpm
yum/stable/aarch64/: pyrosql-cli-1.3.3-1.aarch64.rpm  pyrosql-driver-1.1.0-1.aarch64.rpm  pyrosql-driver-1.1.0-1.aarch64.stable.rpm  pyrosql-driver-1.3.1-1.aarch64.rpm  pyrosql-driver-1.3.3-1.aarch64.rpm
yum/stable/x86_64/: pyrosql-cli-1.3.3-1.x86_64.rpm  pyrosql-driver-1.1.0-1.x86_64.rpm  pyrosql-driver-1.1.0-1.x86_64.stable.rpm  pyrosql-driver-1.3.1-1.x86_64.rpm  pyrosql-driver-1.3.3-1.x86_64.rpm
(+93 files in other folders)
