[workspace]
members = ["rust", "protocol", "rmp", "cli"]
# `ffi-quic` is archived (QUIC transport removed from the driver).  Keep
# it excluded from the workspace so `cargo check --workspace` does not
# try to compile it — remove entirely in a follow-up.
exclude = ["python", "ffi-quic", "ffi-pwire"]
resolver = "2"

[workspace.package]
version = "1.3.3"
edition = "2021"
license = "BSL-1.1"

[workspace.dependencies]
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# ── Local development override (opt-in) ──
# Originally this section patched `pyro-runtime` to a sibling checkout at
# `../pyrosql/crates/pyro-runtime` so driver developers could iterate on
# both repos without commit+push cycles.  Cargo evaluates `[patch]`
# unconditionally, though, so the patch broke every CI run that didn't
# have that sibling tree (the v1.3.3 build-deb-cli jobs caught this).
#
# If you want the patch back as a developer, add it to your personal
# `.cargo/config.toml` (which cargo merges into the workspace spec)
# rather than committing it:
#
#     # ~/.cargo/config.toml or <repo>/.cargo/config.toml (gitignored)
#     [patch."https://github.com/PyroSQL/pyrosql.git"]
#     pyro-runtime = { path = "../pyrosql/crates/pyro-runtime" }
#
# CI uses the git dep declared in `rust/Cargo.toml`, resolved through the
# `PYROSQL_REPO_TOKEN` secret configured in the release workflow.
