[package]
name = "pyrosql-ffi"
version = "1.3.1"
edition = "2021"
description = "C-ABI shared library for PyroLink (PyroSQL QUIC client)"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyrosql = { path = "../rust" }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
itoa = "1"
ryu = "1"
libc = "0.2"
