[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrosql"
version = "1.1.0"
description = "PyroSQL Python driver — pure-Python ctypes binding to libpyrosql_ffi_pwire"
requires-python = ">=3.8"
license = {text = "BSL-1.1"}
dependencies = ["lz4>=4.0.0"]
keywords = ["database", "sql", "pyrosql"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/pyrosql/pyrosql-driver"

[tool.hatch.build.targets.wheel]
packages = ["pyrosql"]
