[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrosql-django"
version = "1.1.0"
description = "Django database backend for PyroSQL"
requires-python = ">=3.8"
license = {text = "BSL-1.1"}
keywords = ["database", "sql", "pyrosql", "django"]
dependencies = [
    "django>=4.2",
    "pyrosql>=0.2.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
]

[project.urls]
Repository = "https://github.com/pyrosql/pyrosql-driver"

[tool.hatch.build.targets.wheel]
packages = ["pyrosql"]
