[package]
name = "diesel-pyrosql"
version = "1.1.0"
edition = "2021"
description = "Diesel backend for PyroSQL — PWire binary protocol"
license = "MIT"
repository = "https://github.com/pyrosql/diesel-pyrosql"

[dependencies]
diesel = { version = "2.2", features = ["r2d2"] }
byteorder = "1.5"

[dev-dependencies]
