[package]
name = "pyrosql-pooler"
version = "0.1.0"
edition = "2021"
description = "PWire connection pooler for PyroSQL (like PgBouncer for PWire protocol)"

[[bin]]
name = "pyrosql-pooler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
